[gd_scene load_steps=5 format=3 uid="uid://dm18hv6wm8moi"]

[ext_resource type="PackedScene" uid="uid://b735rxfcexqks" path="res://source/main_menu/lobby.tscn" id="1_koaky"]
[ext_resource type="Script" path="res://source/main_menu/main_menu.gd" id="1_kwhjp"]
[ext_resource type="PackedScene" uid="uid://djw1srwh1osf6" path="res://source/networking/networking_setup_lobby.tscn" id="2_j4u0p"]
[ext_resource type="PackedScene" uid="uid://bmtb3thxlc0ms" path="res://source/chat/visuals/chat_interface.tscn" id="3_uohmy"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_kwhjp")
networking_interface_scene = ExtResource("2_j4u0p")

[node name="Background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundColor" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.368627, 0.501961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="Lobby" parent="MarginContainer" instance=ExtResource("1_koaky")]
unique_name_in_owner = true
layout_mode = 2

[node name="ChatInterface" parent="." instance=ExtResource("3_uohmy")]
unique_name_in_owner = true
anchors_preset = -1
anchor_top = 0.7
anchor_right = 0.3

[node name="LoadingScreen" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.25, 0.25, 0.247059)

[node name="Contents" type="ColorRect" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.25, 0.25, 1)

[node name="Label" type="Label" parent="LoadingScreen/Contents"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 36
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="LoadingScreen/Contents"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.7
anchor_right = 0.75
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "Cancel"

[connection signal="start_game_requested" from="MarginContainer/Lobby" to="." method="_on_start_game_requested"]
[connection signal="pressed" from="LoadingScreen/Contents/Button" to="." method="_on_start_game_cancelled"]
